--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "cross-env NODE_ENV=development nest start",
+    "start": "npm run start:prod",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:local": "cross-env NODE_ENV=development nest start --watch",
     "start:homolog": "cross-env NODE_ENV=staging node dist/main",
