--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "rxjs": "^7.8.1",
     "sharp": "^0.33.1",
     "source-map-support": "^0.5.21",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.2",
@@ -100,8 +101,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.1.0",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "ts-loader": "^9.5.1"
+    "ts-jest": "^29.1.1"
   },
   "jest": {
     "moduleFileExtensions": [
