--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,8 @@ services:
         value: 10000
       - key: API_PREFIX
         value: api/v1
+      - key: SHOW_SWAGGER
+        value: true
       - key: CORS_ORIGIN
         value: https://your-frontend-domain.com
       # Adicione suas variáveis de ambiente aqui
