--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:local": "cross-env NODE_ENV=development nest start --watch",
     "start:homolog": "cross-env NODE_ENV=staging node dist/main",
-    "start:prod": "cross-env NODE_ENV=production node dist/main",
+    "start:prod": "node dist/main",
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
